manifests/arrs/storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arr-stack
