manifests/arrs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arr-stack
  namespace: arr-stack
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: arr-stack
  template:
    metadata:
      labels:
        app: arr-stack
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k3s-node-2
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr@sha256:a45b5ab0f850f39edb4cc9c95bbd967b52ddc3d4574a4dfb45561177db6c88f4  # 6.3.0.10514-ls313
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7878
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: media-merged
              mountPath: /media_2
              mountPropagation: HostToContainer
            - name: media-merged
              mountPath: /downloads
              subPath: qbittorent
              mountPropagation: HostToContainer
            - name: rdtclient-downloads
              mountPath: /rdtclient-downloads
              mountPropagation: HostToContainer
          readinessProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 6

        - name: sonarr
          image: lscr.io/linuxserver/sonarr@sha256:24acea2956a0ccb11f103877d9f4f8576600fb34bff34820ed749c2256dab89f  # 4.0.19.2979-ls320
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8989
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: media-merged
              mountPath: /media_2
              mountPropagation: HostToContainer
            - name: media-merged
              mountPath: /downloads
              subPath: qbittorent
              mountPropagation: HostToContainer
            - name: rdtclient-downloads
              mountPath: /rdtclient-downloads
              mountPropagation: HostToContainer
          readinessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 6

        #- name: lidarr
        #  image: lscr.io/linuxserver/lidarr@sha256:60be9a1faad3dfba5a711163fc18526845e2ce7b50b463dd9effae7f766c9beb  # 3.1.0.4875-ls37
        #  imagePullPolicy: IfNotPresent
        #  ports:
        #    - name: http
        #      containerPort: 8686
        #  env:
        #    - name: PUID
        #      value: "1000"
        #    - name: PGID
        #      value: "1000"
        #    - name: TZ
        #      value: "Asia/Kolkata"
        #  volumeMounts:
        #    - name: lidarr-config
        #      mountPath: /config
        #    - name: media-merged
        #      mountPath: /media_2
        #      mountPropagation: HostToContainer
        #    - name: media-merged
        #      mountPath: /downloads
        #      subPath: qbittorent
        #      mountPropagation: HostToContainer
        #    - name: rdtclient-downloads
        #      mountPath: /rdtclient-downloads
        #      mountPropagation: HostToContainer
        #  readinessProbe:
        #    tcpSocket:
        #      port: 8686
        #    initialDelaySeconds: 10
        #    periodSeconds: 10
        #    failureThreshold: 6
        #  livenessProbe:
        #    tcpSocket:
        #      port: 8686
        #    initialDelaySeconds: 30
        #    periodSeconds: 20
        #    failureThreshold: 6

        - name: wizarr
          image: ghcr.io/wizarrrr/wizarr@sha256:606f9b88b0303daae11f595e424756b588d9365021c53dcb4d1369f2efc0543c  # v2026.7.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5690
          volumeMounts:
            - name: wizarr-data
              mountPath: /data
          readinessProbe:
            tcpSocket:
              port: 5690
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 5690
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 6

        - name: jellyseerr
          image: ghcr.io/seerr-team/seerr@sha256:f4768de5f616248d723e05891f3345a1402123775d03bf0890dbfedc0831bda1  # v3.4.1
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - name: http
              containerPort: 5055
          volumeMounts:
            - name: jellyseerr-config
              mountPath: /app/config
          readinessProbe:
            tcpSocket:
              port: 5055
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 5055
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 6

        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr@sha256:139dfee1c6f89249c8d665d1333a42e8ec74ec0a86bc6bb1c8461e10d3a66a47  # v3.5.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: flaresolverr
              containerPort: 8191
              protocol: TCP

      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        #- name: lidarr-config
        #  persistentVolumeClaim:
        #    claimName: lidarr-config
        - name: wizarr-data
          persistentVolumeClaim:
            claimName: wizarr-data
        - name: jellyseerr-config
          persistentVolumeClaim:
            claimName: jellyseerr-config
        - name: media-merged
          hostPath:
            path: /mnt/merged/media
            type: Directory
        - name: media-nas
          hostPath:
            path: /mnt/nas/media
            type: Directory
        - name: rdtclient-downloads
          hostPath:
            path: /mnt/nas/media/rdtclient
            type: DirectoryOrCreate
