manifests/arrs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arr-stack-service
  namespace: arr-stack
spec:
  selector:
    app: arr-stack
  ports:
    - name: radarr
      port: 7878
      targetPort: 7878
    - name: sonarr
      port: 8989
      targetPort: 8989
    - name: lidarr
      port: 8686
      targetPort: 8686
    - name: wizarr
      port: 5690
      targetPort: 5690
    - name: jellyseerr
      port: 5055
      targetPort: 5055
