manifests/arrs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arr-stack-ingress
  namespace: arr-stack
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx-private
  tls:
    - hosts:
        - sonarr.techtronics.top
        - radarr.techtronics.top
        - lidarr.techtronics.top
  rules:
    - host: sonarr.techtronics.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arr-stack-service
                port:
                  number: 8989
    - host: radarr.techtronics.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arr-stack-service
                port:
                  number: 7878
    - host: lidarr.techtronics.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arr-stack-service
                port:
                  number: 8686
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arr-stack-public-ingress
  namespace: arr-stack
  annotations:
    argocd.argoproj.io/sync-wave: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wizarr.techtronics.top
        - jellyseerr.techtronics.top
  rules:
    - host: wizarr.techtronics.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arr-stack-service
                port:
                  number: 5690
    - host: jellyseerr.techtronics.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arr-stack-service
                port:
                  number: 5055
